# nonebot-plugin-ai-groupmate

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: custom-agent-tools.md
nonebot_plugin_ai_groupmate/: __init__.py  config.py  llm.py  model.py  utils.py  vlm.py
nonebot_plugin_ai_groupmate/agent/: __init__.py
nonebot_plugin_ai_groupmate/migrations/: 2ba09dd95dc6_add_relation.py
nonebot_plugin_ai_groupmate/milvus/: __init__.py
src/nonebot_plugin_ai_groupmate/: __init__.py  config.py  memory.py  model.py  reply_guard.py  stop_words.txt  usage.py  utils.py  vlm.py  webui.py
src/nonebot_plugin_ai_groupmate/agent/: __init__.py  common_tools.py  context.py  conversation.py  custom_tools.py  graph.py  history_format.py  meme_tools.py  moderation_tools.py  private_tools.py  profile_tools.py  prompt_cache.py  prompts.py  reaction.py  recall_tools.py  reply_tools.py  schedule_tools.py
src/nonebot_plugin_ai_groupmate/migrations/: 6a6a44d58ced_first_revision.py  811f4ae4bcd1_add_group_memory.py  __init__.py  a1b2c3d4e5f6_add_chathistory_composite_index.py  c2d7e4f1a9b0_add_agent_usage_metrics.py  d9f0a8c7e2b1_add_token_usage.py  f4c9b2e8a731_add_token_usage_cache_creation.py
src/nonebot_plugin_ai_groupmate/milvus/: __init__.py
tests/: conftest.py  fake.py  plugin_test.py  test_agent_graph.py  test_custom_tools.py  test_webui.py
